# gh-snake-contributions

./: .gitignore  PLAN.md  README.md  action.yml  pyproject.toml
.github/workflows/: generate-snake.yml
src/gh_snake_contributions/: __init__.py  __main__.py  config.py
src/gh_snake_contributions/ai/: __init__.py  controller.py  pathfinding.py
src/gh_snake_contributions/data/: __init__.py  github_fetcher.py  local_loader.py
src/gh_snake_contributions/encoder/: __init__.py  gif.py
src/gh_snake_contributions/game/: __init__.py  board.py  collision.py  engine.py  food.py  snake.py
src/gh_snake_contributions/renderer/: __init__.py  canvas.py  themes.py
tests/: __init__.py  test_ai.py  test_game.py
tests/fixtures/: sample_contributions.json
